fix: decrease spacing between story cards in mobile to 40px

--- a/components/StoryCards/StoryCard.module.scss
+++ b/components/StoryCards/StoryCard.module.scss
@@ -4,7 +4,7 @@ $small-card-image-size: 230px;
     position: relative;
 
     &:not(:last-of-type) {
-        margin-bottom: $spacing-7;
+        margin-bottom: $spacing-6;
     }
 
     /* stylelint-disable-next-line order/order */
